# screenpilot

./: LICENSE  README.md  pyproject.toml
.github/workflows/: native-linux-deb.yml  native-windows-installer.yml
installer/: ScreenPilot-Native.iss
native-linux/: CMakeLists.txt
native-linux/packaging/: control  postinst  screenpilot.desktop
native-linux/src/: main.cpp
native-windows/: CMakeLists.txt  README.md
native-windows/resources/: resource.h  screenpilot.rc
native-windows/src/: main.cpp
screenpilot/: __init__.py  app.py  cli.py  gui.py  models.py
screenpilot/backends/: __init__.py  linux.py  windows.py
scripts/: build-linux-deb.sh  build-native.ps1  build.ps1  build.sh
tests/: test_models.py  test_windows_backend.py
